Optimized feed preview for Vercel deployment
- Increased Vercel function timeout to 60 seconds for feed operations
- Extended axios timeout to 30 seconds for better compatibility
- Added maxDuration configuration for preview, sync, and import routes
- Added cron job configuration for scheduled feed syncing (5 minutes for cron)
- Configured rewrites for API routes
- Better timeout handling for slow feeds and external APIs

--- a/vercel.json
+++ b/vercel.json
@@ -2,5 +2,25 @@
   "crons": [{
     "path": "/api/cron/sync-feeds",
     "schedule": "0 0 * * *"
-  }]
+  }],
+  "functions": {
+    "app/api/admin/feeds/*/preview/route.ts": {
+      "maxDuration": 60
+    },
+    "app/api/admin/feeds/*/sync/route.ts": {
+      "maxDuration": 60
+    },
+    "app/api/admin/feeds/*/import/route.ts": {
+      "maxDuration": 60
+    },
+    "app/api/cron/sync-feeds/route.ts": {
+      "maxDuration": 300
+    }
+  },
+  "rewrites": [
+    {
+      "source": "/api/:path*",
+      "destination": "/api/:path*"
+    }
+  ]
 }
