feat: Implement 16:9 Mixed Layout, Video Protection, Interactive End Screen, and Remove Analytics
Major Features:
- Implement Mixed Layout (Smart Hybrid) with 16:9 aspect ratio
  * 16:9 landscape hero banners for cinematic experience
  * 16:9 content grid (1-4 columns responsive)
  * 16:9 horizontal scroll carousels
  * 2:3 portrait for compact sidebars (Related Videos)
  * Optimized spacing and responsive breakpoints

- Add Video Protection System
  * Block external redirects from video overlays
  * Prevent clicks on watermarks/logos (Vidwo, XVideos, etc.)
  * Sandbox iframe restrictions
  * Support for 15+ video platforms (Vidoza, Streamtape, Doodstream, Mixdrop, etc.)
  * Transparent overlay to block external links

- Interactive End Screen Feature
  * Auto-play next video with 10-second countdown
  * Large next video card with preview
  * Action buttons (Replay, Save to Watchlist, Browse More)
  * Grid of 4 related videos
  * Smart auto-hide when seeking back
  * Smooth animations and transitions

- Remove Analytics Section
  * Removed Analytics tab from admin sidebar
  * Removed Analytics quick action from dashboard
  * Deleted analytics page and API routes
  * Cleaner admin interface with 3 main sections

UI/UX Improvements:
- Enhanced hero sections with proper 16:9 aspect ratio
- Better spacing with increased gaps (4→6)
- Shadow effects with Netflix red glow on hover
- Responsive text sizing across breakpoints
- Optimized image sizes for performance
- Professional grid layouts (1→2→3→4 columns)

New Components:
- VideoEndScreen.tsx (Interactive end screen)
- AdminLayout.tsx (Admin panel layout)
- LayoutSwitcher.tsx (View mode switcher)
- CinematicHero.tsx (Cinematic viewing mode)
- CinematicDetailsSection.tsx (Video details)
- AdvancedFilterSidebar.tsx (Enhanced filters)
- BrowsePageLayouts.tsx (Multiple layout options)
- ContentCardEnhanced.tsx (Enhanced content cards)
- HeroSectionEnhanced.tsx (Enhanced hero)

Technical Changes:
- Updated videoUrlConverter 

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-DATABASE_URL="mysql://root:YOUR_DATABASE_PASSWORD@your-database-host:port/railway"
-NEXT_PUBLIC_SITE_URL="https://your-site.vercel.app"
+DATABASE_URL="mysql://root:UMGuHqHmWjCdYiSjYyxwpHHyGLsSzUOO@metro.proxy.rlwy.net:29632/railway"
+NEXT_PUBLIC_SITE_URL="http://localhost:3000"
 NEXT_PUBLIC_ADMIN_PASSWORD="NetworkChanel2024!"
 
 # Optional: For enhanced metadata extraction
